--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <iframe style="display: none;" class="item" sandbox="allow-forms allow-scripts allow-same-origin allow-modals allow-popups"
                 id="output"></iframe>
     </div>
-    <script type="text/javascript" src="/php.js"></script>
+    <script type="text/javascript" src="php.js"></script>
     <script type="text/javascript">
       window.onload = function () {
         window.output = document.getElementById('output').contentWindow.document;
