--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>wasmphp</title>
     <link rel="stylesheet" href="https://codemirror.net/lib/codemirror.css" />
-    <script src="https://codemirror.net/lib/codemirror.js"></script>
+    <script src="https://codemirror.net/codemirror.js"></script>
     <script src="https://codemirror.net/addon/edit/matchbrackets.js"></script>
     <script src="https://codemirror.net/mode/htmlmixed/htmlmixed.js"></script>
     <script src="https://codemirror.net/mode/xml/xml.js"></script>
